@@ -1,3 +1,8 @@
+2018-04-23  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/85489
+	* config/x86/sjlj.S (GTM_longjmp): Replace jle/jg with jbe/ja.
+
 2018-04-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* configure: Regenerated.
